--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-app",
+  "name": "wc-toggle-color-button",
   "version": "1.0.0",
-  "description": "",
+  "description": "https://github.com/dede-20191130/wc-toggle-color-button",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
